# WBS

./: CMakeLists.txt  README.md  bf-sde-9.7.0.manifest  extract_all.sh  p4runtime_update_config.py  run_bfshell.sh  run_p4_tests.sh  run_switchd.sh  run_tofino_model.sh
cmake/: FindGRPC.cmake  FindP4CModel.cmake  P4Build.cmake
p4-compilers-9.7.0/share/p4c/: LICENSE  LICENSES.txt  README
p4-compilers-9.7.0/share/p4c/p4_14include/tofino/: constants.p4  intrinsic_metadata.p4  lpf_blackbox.p4  meter_blackbox.p4  pktgen_headers.p4  primitives.p4  stateful_alu_blackbox.p4  wred_blackbox.p4
p4-compilers-9.7.0/share/p4c/p4_14include/tofino2/: intrinsic_metadata.p4
p4-compilers-9.7.0/share/p4c/p4c_src/: barefoot.py  bfn_version.py  main.py  p4c.tofino.cfg  p4c.tofino2.cfg  schema_versions
p4-compilers-9.7.0/share/p4c/p4include/: psa.p4  t2na.p4  tna.p4  tofino2.p4  tofino2arch.p4
p4-compilers-9.7.0/share/p4c/p4include/bmv2/: psa.p4
p4-compilers-9.7.0/share/p4c/p4include/tofino/: lpf.p4  meter.p4  p4_14_prim.p4  stateful_alu.p4  stratum.p4  wred.p4
p4studio/: CMakeLists.txt  __main__.py  install-p4studio-dependencies.sh  main.py  p4studio  requirements.txt  self_check.py
p4studio/app/: __init__.py  app_command.py
p4studio/clean/: clean_command.py
p4studio/config/: __init__.py  cmake.py  config_option.py  configuration_manager.py  configure_command.py
p4studio/dependencies/: __init__.py  dependencies.yaml  dependencies_command.py  dependency_installer.py  dependency_manager.py  merge.py
p4studio/dependencies/source/: __init__.py  dependencies.py  install_boost.py  install_bridge_utils.py  install_grpc.py  install_libcli.py  install_pi.py  install_scapy.py  install_thrift.py  utils.py
p4studio/interactive/: __init__.py  interactive_command.py
p4studio/profile/: __init__.py  backward_compatibility.py  profile.py  profile_command.py  profile_execution_plan.py  profile_schema.py
p4studio/profiles/: README.md  all-tofino.yaml  diags-tofino.yaml  p4-14-programs-tofino.yaml  p4-16-programs-tofino.yaml  p4-runtime-tofino.yaml  stratum.yaml  switch-p4-16.yaml
p4studio/program/: __init__.py  program_command.py
p4studio/system/: check_system_command.py
p4studio/utils/: __init__.py  click.py  click_cmds.py  collections.py  decorators.py  exceptions.py  logging.py  os_info.py  p4studio_path.py  processes.py  subprocess_builder.py  terminal.py
p4studio/workspace/: __init__.py  sde_workspace.py  workspace.py  workspace_utils.py
